--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./public/style.css">
     <title>Document</title>
 </head>
 <body>
-    <section>
+    <section class="hero">
         <nav>
-            <ul>
-                <li>Name:Gitau Samson</li>
-                <li>Age:18</li>
-                <li>Hobby:Driving</li>
+            <ul id="nav-list">
+                <li><a href="#">About me</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact me</a></li>                
             </ul>
         </nav>
+        <div class="hero-area">
+            <div class="hero-text"></div>
+            <h1> Gitau Samson</h1>
+            <h3>Chemical Engineer</h3>
+            <div class="button"><a href="#">About me</a></div>
+            </div>
+            <div>                                
+            </div>
+        </div>
     </section> 
 </body>
 </html>
